# RXP-YOLO

./: README.md  cleanup.py  pyproject.toml  requirements.txt  setup.py
configs/: data_uavdt.yaml  data_visdrone.yaml  yolov10s_eos.yaml
docs/: README_zh.md
rxp_yolo/: __init__.py
rxp_yolo/nn/modules/: EADNet.py  SEGFPN.py
scripts/: eval.py  export.py  prune.py  train.py
