[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rxp-yolo"
version = "1.0.0"
description = "RXP-YOLO: Enhanced YOLOv10 for Real-Time Object Detection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["object detection", "yolo", "deep learning", "pytorch", "computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "numpy>=1.23.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "py-cpuinfo>=9.0.0",
    "psutil>=5.9.0",
    "thop>=0.1.1",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.16.0"]
dev = ["pytest>=7.4.0", "black>=23.7.0", "flake8>=6.1.0"]

[project.urls]
Homepage = "https://github.com/yourusername/RXP-YOLO"
Documentation = "https://rxpyolo.readthedocs.io"
Repository = "https://github.com/yourusername/RXP-YOLO.git"
Issues = "https://github.com/yourusername/RXP-YOLO/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rxp_yolo*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
